--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,8 @@ buildscript {
 allprojects {
   repositories {
     jcenter()
-    flatDir {
-      dirs 'libs'
-    }
     google()
+    maven { url "https://dl.bintray.com/asf/asf" }
   }
 }
 
