--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,7 @@ APTOIDE_IAB_BIND_PACKAGE=cm.aptoide.pt
 APTOIDE_IAB_PERMISSION=cm.aptoide.pt.permission.BILLING
 APTOIDE_IAB_KEY=CONSTRUCT_YOUR_APTOIDE_KEY_AND_PLACE_IT_HERE
 APTOIDE_IAB_UPDATE_ACTION=cm.aptoide.pt.PURCHASES_UPDATED
+ASF_WALLET_STORE_FILE=replace
+ASF_WALLET_STORE_PASSWORD=replace
+ASF_WALLET_KEY_ALIAS=replace
+ASF_WALLET_KEY_PASSWORD=replace
