--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx1536M
+
 GOOGLE_IAB_BIND_ACTION=com.android.vending.billing.InAppBillingService.BIND
 GOOGLE_IAB_BIND_PACKAGE=com.android.vending
 GOOGLE_IAB_PERMISSION=com.android.vending.BILLING
