1- Added Appcoins wallet aidl for ipc on IAB flow. 2- Updated several variable with reference to asf and aptoide. 3 - Added iab helper and main activity flow for iab flow.

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,12 +23,15 @@ GOOGLE_IAB_BIND_PACKAGE=com.android.vending
 GOOGLE_IAB_PERMISSION=com.android.vending.BILLING
 GOOGLE_IAB_KEY=CONSTRUCT_YOUR_GOOGLE_KEY_AND_PLACE_IT_HERE
 GOOGLE_IAB_UPDATE_ACTION=com.android.vending.billing.PURCHASES_UPDATED
-APTOIDE_IAB_BIND_ACTION=cm.aptoide.pt.iab.action.BIND
-APTOIDE_IAB_BIND_PACKAGE=cm.aptoide.pt
-APTOIDE_IAB_PERMISSION=cm.aptoide.pt.permission.BILLING
-APTOIDE_IAB_KEY=CONSTRUCT_YOUR_APTOIDE_KEY_AND_PLACE_IT_HERE
-APTOIDE_IAB_UPDATE_ACTION=cm.aptoide.pt.PURCHASES_UPDATED
-ASF_WALLET_STORE_FILE=replace
-ASF_WALLET_STORE_PASSWORD=replace
-ASF_WALLET_KEY_ALIAS=replace
-ASF_WALLET_KEY_PASSWORD=replace
+APPCOINS_IAB_BIND_ACTION=com.appcoins.wallet.iab.action.BIND
+APPCOINS_IAB_BIND_PACKAGE=com.appcoins.wallet
+APPCOINS_IAB_PERMISSION=com.appcoins.wallet.permission.BILLING
+APPCOINS_DEV_IAB_BIND_ACTION=com.appcoins.wallet.dev.iab.action.BIND
+APPCOINS_DEV_IAB_BIND_PACKAGE=com.appcoins.wallet.dev
+APPCOINS_DEV_IAB_PERMISSION=com.appcoins.wallet.dev.permission.BILLING
+APPCOINS_IAB_KEY=CONSTRUCT_YOUR_APTOIDE_KEY_AND_PLACE_IT_HERE
+APPCOINS_IAB_UPDATE_ACTION=
+APPCOINS_WALLET_STORE_FILE=replace
+APPCOINS_WALLET_STORE_PASSWORD=replace
+APPCOINS_WALLET_KEY_ALIAS=replace
+APPCOINS_WALLET_KEY_PASSWORD=replace
