--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aptoide.iabexample">
 
+  <!-- VERY IMPORTANT! Don't forget this permission, or in-app billing won't work. -->
+  <uses-permission android:name="${iabPermission}" />
+
   <application
       android:name=".Application"
       android:allowBackup="true"
