--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     debug {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-      applicationIdSuffix ".debug"
+//      applicationIdSuffix ".debug"
       applicationVariants.all { variant -> renameArtifact(defaultConfig)
       }
     }
@@ -99,7 +99,7 @@ android {
 
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
-
+  implementation 'com.google.code.gson:gson:2.8.2'
   api 'com.asfoundation:appcoins-ads:0.3.7a'
   api 'com.asfoundation:appcoins-iab:0.3.7a'
 }
