--- a/gradle.properties
+++ b/gradle.properties
@@ -25,11 +25,11 @@ GOOGLE_IAB_KEY=CONSTRUCT_YOUR_GOOGLE_KEY_AND_PLACE_IT_HERE
 GOOGLE_IAB_UPDATE_ACTION=com.android.vending.billing.PURCHASES_UPDATED
 APPCOINS_IAB_BIND_ACTION=com.appcoins.wallet.iab.action.BIND
 APPCOINS_IAB_BIND_PACKAGE=com.appcoins.wallet
-APPCOINS_IAB_PERMISSION=com.appcoins.wallet.permission.BILLING
+APPCOINS_IAB_PERMISSION=com.appcoins.BILLING
 APPCOINS_DEV_IAB_BIND_ACTION=com.appcoins.wallet.dev.iab.action.BIND
 APPCOINS_DEV_IAB_BIND_PACKAGE=com.appcoins.wallet.dev
-APPCOINS_DEV_IAB_PERMISSION=com.appcoins.wallet.dev.permission.BILLING
-APPCOINS_IAB_KEY=CONSTRUCT_YOUR_APTOIDE_KEY_AND_PLACE_IT_HERE
+APPCOINS_DEV_IAB_PERMISSION=com.appcoins.dev.BILLING
+APPCOINS_IAB_KEY=CONSTRUCT_YOUR_BDS_KEY_AND_PLACE_IT_HERE
 APPCOINS_IAB_UPDATE_ACTION=
 APPCOINS_WALLET_STORE_FILE=replace
 APPCOINS_WALLET_STORE_PASSWORD=replace
