--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
   repositories {
     jcenter()
     google()
-    maven { url "https://dl.bintray.com/asf/asf" }
+    maven { url "https://dl.bintray.com/blockchainds/bds" }
   }
 }
 
