[APPC-693] Add 2 new actions to call on step payment with and without callback_url.

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
     jcenter()
     google()
     maven { url "https://dl.bintray.com/blockchainds/bds" }
+    maven { url "https://dl.bintray.com/asf/asf" }
+
   }
 }
 
