Clean worngly commited files and changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
 # Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.0xd133fab7abc4711fd328c4aefbf04256a79b1b40
+# The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
