--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.google.code.gson:gson:2.8.2'
   implementation 'com.blockchainds:appcoins-ads:0.4.6.20b'
-  implementation "com.google.code.gson:gson:2.8.2"
+  implementation 'com.blockchainds:android-appcoins-billing:0.4.8.23b.dev'
 }
 
 def renameArtifact(defaultConfig) {
