--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     minSdkVersion 21
     targetSdkVersion 27
     versionCode 13
-    versionName "1.3.6"
+    versionName "1.3.8"
     multiDexEnabled true
   }
 
@@ -31,6 +31,7 @@ android {
 
   buildTypes {
     debug {
+      debuggable true
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //      applicationIdSuffix ".debug"
@@ -39,7 +40,7 @@ android {
     }
 
     release {
-      minifyEnabled true
+      minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
       applicationVariants.all { variant -> renameArtifact(defaultConfig)
@@ -106,8 +107,8 @@ android {
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.google.code.gson:gson:2.8.2'
-  implementation 'com.blockchainds:appcoins-ads:0.4.6.20b'
-  implementation "com.google.code.gson:gson:2.8.2"
+  implementation 'com.blockchainds:appcoins-ads:0.4.7.21b'
+  implementation 'com.blockchainds:appcoins-contract-proxy:0.4.6.20b'
 }
 
 def renameArtifact(defaultConfig) {
