--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
     <activity
-        android:name=".MainActivity"
-        android:screenOrientation="landscape">
+        android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
