Creating different flavours
- Creating Flavours for SDK, IADL,GOOGLE

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,10 @@ android {
       }
     }
 
+    appcoinssdk{
+      dimension "iab"
+    }
+
     mainNetwork {
       dimension "network"
       buildConfigField "boolean", "TEST_NETWORK", "false"
