--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
   <uses-permission android:name="${iabPermission}" />
 
   <application
-      android:name=".Application"
+      android:name="com.aptoide.sdk.Application"
       android:allowBackup="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
     <activity
-        android:name=".MainActivity"
+        android:name="com.aptoide.sdk.MainActivity"
         android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
