--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     debug {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//      applicationIdSuffix ".debug"
+      //      applicationIdSuffix ".debug"
       applicationVariants.all { variant -> renameArtifact(defaultConfig)
       }
     }
@@ -57,8 +57,53 @@ android {
       buildConfigField "String", "IAB_BIND_PACKAGE",
           "\"" + project.GOOGLE_IAB_BIND_PACKAGE + "\""
       buildConfigField "String", "IAB_UPDATE_ACTION",
-          "\"" + project.GOOGLE_IAB_UPDATE_ACTION+ "\""
-      manifestPlaceholders = [iabPermission: project.GOOGLE_IAB_PERMISSION]
+          "\"" + project.GOOGLE_IAB_UPDATE_ACTION + "\""
+         manifestPlaceholders =
+            [iabPermission: project.GOOGLE_IAB_PERMISSION, MainActivityLaunch: "com.aptoide.iabexample.MainActivity"]
+    }
+
+    appcoinssdk {
+      dimension "iab"
+      applicationId = "com.aptoide.iabexample"
+      buildConfigField "String", "IAB_UPDATE_ACTION",
+          "\"" + project.APPCOINS_IAB_UPDATE_ACTION + "\""
+      applicationVariants.all { variant ->
+        if (variant.buildType.getName().equalsIgnoreCase("debug")) {
+          buildConfigField "String", "IAB_BIND_ACTION",
+              "\"" + project.APPCOINS_DEV_IAB_BIND_ACTION + "\""
+          buildConfigField "String", "IAB_BIND_PACKAGE",
+              "\"" + project.APPCOINS_DEV_IAB_BIND_PACKAGE + "\""
+          buildConfigField "String", "IAB_WALLET_ADDR",
+              "\"" + project.APPCOINS_DEV_IAB_WALLET_ADDR + "\""
+          buildConfigField "String", "IAB_KEY",
+              "\"" + project.APPCOINS_DEV_IAB_KEY + "\""
+          buildConfigField "String", "WS_SERVICE_DEV",
+              "\"" + project.WS_SERVICE_DEV + "\""
+          buildConfigField "String", "WS_SERVICE",
+              "\"" + project.WS_SERVICE + "\""
+          if (variant.productFlavors.get(0).name.equals("appcoinssdk")) {
+            variant.getMergedFlavor().manifestPlaceholders =
+                [iabPermission: project.APPCOINS_IAB_PERMISSION, MainActivityLaunch: "com.aptoide.iabexample.SDKMainActivity"]
+          }
+        } else {
+          buildConfigField "String", "IAB_KEY",
+              "\"" + project.APPCOINS_IAB_KEY + "\""
+          buildConfigField "String", "IAB_BIND_ACTION",
+              "\"" + project.APPCOINS_IAB_BIND_ACTION + "\""
+          buildConfigField "String", "IAB_BIND_PACKAGE",
+              "\"" + project.APPCOINS_IAB_BIND_PACKAGE + "\""
+          buildConfigField "String", "IAB_WALLET_ADDR",
+              "\"" + project.APPCOINS_IAB_WALLET_ADDR + "\""
+          buildConfigField "String", "WS_SERVICE_DEV",
+              "\"" + project.WS_SERVICE_DEV + "\""
+          buildConfigField "String", "WS_SERVICE",
+              "\"" + project.WS_SERVICE + "\""
+          if (variant.productFlavors.get(0).name.equals("appcoinssdk")) {
+            variant.getMergedFlavor().manifestPlaceholders =
+                [iabPermission: project.APPCOINS_IAB_PERMISSION, MainActivityLaunch: "com.aptoide.iabexample.SDKMainActivity"]
+          }
+        }
+      }
     }
 
     appcoinsiab {
@@ -80,7 +125,11 @@ android {
               "\"" + project.WS_SERVICE_DEV + "\""
           buildConfigField "String", "WS_SERVICE",
               "\"" + project.WS_SERVICE + "\""
-          variant.getMergedFlavor().manifestPlaceholders = [iabPermission: project.APPCOINS_IAB_PERMISSION]
+
+          if (variant.productFlavors.get(0).name.equals("appcoinsiab")) {
+            variant.getMergedFlavor().manifestPlaceholders =
+                [iabPermission: project.APPCOINS_IAB_PERMISSION, MainActivityLaunch: "com.aptoide.iabexample.MainActivity"]
+          }
         } else {
           buildConfigField "String", "IAB_KEY",
               "\"" + project.APPCOINS_IAB_KEY + "\""
@@ -94,48 +143,15 @@ android {
               "\"" + project.WS_SERVICE_DEV + "\""
           buildConfigField "String", "WS_SERVICE",
               "\"" + project.WS_SERVICE + "\""
-          variant.getMergedFlavor().manifestPlaceholders = [iabPermission: project.APPCOINS_IAB_PERMISSION]
+          if (variant.productFlavors.get(0).name.equals("appcoinsiab")) {
+            variant.getMergedFlavor().manifestPlaceholders =
+                [iabPermission: project.APPCOINS_IAB_PERMISSION, MainActivityLaunch: "com.aptoide.iabexample.MainActivity"]
+          }
         }
       }
     }
 
-    appcoinssdk{
-      dimension "iab"
-      applicationId = "com.aptoide.sdk"
-      buildConfigField "String", "IAB_UPDATE_ACTION",
-          "\"" + project.APPCOINS_IAB_UPDATE_ACTION + "\""
-      applicationVariants.all { variant ->
-        if (variant.buildType.getName().equalsIgnoreCase("debug")) {
-          buildConfigField "String", "IAB_BIND_ACTION",
-              "\"" + project.APPCOINS_DEV_IAB_BIND_ACTION + "\""
-          buildConfigField "String", "IAB_BIND_PACKAGE",
-              "\"" + project.APPCOINS_DEV_IAB_BIND_PACKAGE + "\""
-          buildConfigField "String", "IAB_WALLET_ADDR",
-              "\"" + project.APPCOINS_DEV_IAB_WALLET_ADDR + "\""
-          buildConfigField "String", "IAB_KEY",
-              "\"" + project.APPCOINS_DEV_IAB_KEY + "\""
-          buildConfigField "String", "WS_SERVICE_DEV",
-              "\"" + project.WS_SERVICE_DEV + "\""
-          buildConfigField "String", "WS_SERVICE",
-              "\"" + project.WS_SERVICE + "\""
-          variant.getMergedFlavor().manifestPlaceholders = [iabPermission: project.APPCOINS_IAB_PERMISSION]
-        } else {
-          buildConfigField "String", "IAB_KEY",
-              "\"" + project.APPCOINS_IAB_KEY + "\""
-          buildConfigField "String", "IAB_BIND_ACTION",
-              "\"" + project.APPCOINS_IAB_BIND_ACTION + "\""
-          buildConfigField "String", "IAB_BIND_PACKAGE",
-              "\"" + project.APPCOINS_IAB_BIND_PACKAGE + "\""
-          buildConfigField "String", "IAB_WALLET_ADDR",
-              "\"" + project.APPCOINS_IAB_WALLET_ADDR + "\""
-          buildConfigField "String", "WS_SERVICE_DEV",
-              "\"" + project.WS_SERVICE_DEV + "\""
-          buildConfigField "String", "WS_SERVICE",
-              "\"" + project.WS_SERVICE + "\""
-          variant.getMergedFlavor().manifestPlaceholders = [iabPermission: project.APPCOINS_IAB_PERMISSION]
-        }
-      }
-    }
+
 
     mainNetwork {
       dimension "network"
@@ -156,7 +172,6 @@ dependencies {
   implementation 'com.blockchainds:appcoins-ads:0.5.0.24b.dev'
   implementation 'com.blockchainds:android-appcoins-billing:0.5.0.24b.dev'
   implementation 'com.blockchainds:appcoins-contract-proxy:0.4.6.20b'
-
 }
 
 def renameArtifact(defaultConfig) {
