--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,26 +6,19 @@
   <uses-permission android:name="${iabPermission}" />
 
   <application
-      android:name="com.aptoide.sdk.Application"
+      android:name=".Application"
       android:allowBackup="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
     <activity
-        android:name="com.aptoide.sdk.MainActivity"
+        android:name="${MainActivityLaunch}"
         android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity
-        android:name="com.aptoide.iabexample.MainActivity"
-        android:screenOrientation="landscape">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+
   </application>
 </manifest>
