--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,5 @@ APPCOINS_WALLET_STORE_FILE=replace
 APPCOINS_WALLET_STORE_PASSWORD=replace
 APPCOINS_WALLET_KEY_ALIAS=replace
 APPCOINS_WALLET_KEY_PASSWORD=replace
+BACK_END_HOST_DEV=https://apichain-dev.blockchainds.com/
+BACK_END_HOST_PROD=https://apichain.blockchainds.com/
