--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
     <activity
-        android:name="${MainActivityLaunch}"
+        android:name=".MainActivity"
         android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
