--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
   flavorDimensions "iab", "network"
 
   defaultConfig {
-    applicationId "com.appcoins.trivialdrivesample"
+    applicationId "com.appcoins.trivialdrivesample.testing"
     minSdkVersion 21
     targetSdkVersion 27
     versionCode 13
@@ -39,7 +39,7 @@ android {
     }
 
     release {
-      minifyEnabled true
+      minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
       applicationVariants.all { variant -> renameArtifact(defaultConfig)
@@ -138,9 +138,9 @@ android {
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.google.code.gson:gson:2.8.2'
-  implementation 'com.blockchainds:appcoins-ads:0.5.0.26b.dev'
-  implementation 'com.blockchainds:android-appcoins-billing:0.5.0.26b.dev'
-  implementation 'com.blockchainds:appcoins-contract-proxy:0.4.6.20b'
+  implementation 'com.blockchainds:appcoins-ads:0.5.0.30b.dev'
+  implementation 'com.blockchainds:android-appcoins-billing:0.5.0.30b.dev'
+  implementation 'com.blockchainds:appcoins-contract-proxy:0.5.0.30b.dev'
 }
 
 def renameArtifact(defaultConfig) {
