--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
   flavorDimensions "iab", "network"
 
   defaultConfig {
-    applicationId "com.appcoins.trivialdrivesample.testing"
+    applicationId "com.appcoins.trivialdrivesample"
     minSdkVersion 21
     targetSdkVersion 27
-    versionCode 13
-    versionName "1.3.6"
+    versionCode 16
+    versionName "1.4.0"
     multiDexEnabled true
   }
 
@@ -138,9 +138,9 @@ android {
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.google.code.gson:gson:2.8.2'
-  implementation 'com.blockchainds:appcoins-ads:0.5.0.30b.dev'
-  implementation 'com.blockchainds:android-appcoins-billing:0.5.0.30b.dev'
-  implementation 'com.blockchainds:appcoins-contract-proxy:0.5.0.30b.dev'
+  implementation 'com.blockchainds:appcoins-ads:0.5.0.25b'
+  implementation 'com.blockchainds:android-appcoins-billing:0.5.0.25b'
+  implementation 'com.blockchainds:appcoins-contract-proxy:0.5.0.25b'
 }
 
 def renameArtifact(defaultConfig) {
