Upgrade version to 1.4.1. Update SDK lib and improve antifeeze purchase flow.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /app/mainNetwork
 /app/release
 /app/ropstenNetwork
+app/appcoinsiabRopstenNetwork/
+app/appcoinssdkMainNetwork/
+app/appcoinssdkRopstenNetwork/
