--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ allprojects {
 }
 
 project.ext {
-  sdkDev = "0.5.2.52b.dev"
-  sdk = "0.5.3.2"
+  sdkDev = "0.5.4.0.dev"
+  sdk = "0.5.4.1"
 }
 
 task wrapper(type: Wrapper) {
