--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,11 @@ allprojects {
 project.ext {
   sdkDev = "0.5.4.0.dev"
   sdk = "0.5.4.1"
+  iabDev = "0.5.4.0.dev"
+  iab = "0.5.4.1"
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
   gradleVersion = '4.6'
   distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
