--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     debug {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-      //      applicationIdSuffix ".debug"
+            applicationIdSuffix ".debug"
       applicationVariants.all { variant -> renameArtifact(defaultConfig)
       }
     }
@@ -139,10 +139,10 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.2'
   debugImplementation "com.blockchainds:appcoins-ads:$sdkDev"
   debugImplementation "com.blockchainds:android-appcoins-billing:$sdkDev"
-  debugImplementation "com.blockchainds:appcoins-contract-proxy:$iabDev"
+  debugImplementation "com.blockchainds:appcoins-contract-proxy:0.5.5.2.dev"
   releaseImplementation "com.blockchainds:appcoins-ads:$sdk"
   releaseImplementation "com.blockchainds:android-appcoins-billing:$sdk"
-  releaseImplementation "com.blockchainds:appcoins-contract-proxy:$iab"
+  releaseImplementation "com.blockchainds:appcoins-contract-proxy:0.5.5.5"
 }
 
 def renameArtifact(defaultConfig) {
