--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,8 @@ allprojects {
 }
 
 project.ext {
-  sdkDev = "0.5.5.2.dev"
-  sdk = "0.5.5.3"
-  iabDev = "0.5.5.2.dev"
-  iab = "0.5.5.3"
+  sdkDev = "0.6.1.0.dev"
+  sdk = "0.6.1.0.staging"
 }
 
 wrapper {
