--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion 33
-  buildToolsVersion '29.0.2'
   namespace "com.aptoide.iabexample"
 
   flavorDimensions = ["iab", "network"]
@@ -27,10 +26,10 @@ android {
 
   signingConfigs {
     release {
-      storeFile = file(project.APPCOINS_WALLET_STORE_FILE)
-      storePassword = project.APPCOINS_WALLET_STORE_PASSWORD
-      keyAlias = project.APPCOINS_WALLET_KEY_ALIAS
-      keyPassword = project.APPCOINS_WALLET_KEY_PASSWORD
+      storeFile = file(project.BDS_WALLET_STORE_FILE)
+      storePassword = project.BDS_WALLET_STORE_PASSWORD
+      keyAlias = project.BDS_WALLET_KEY_ALIAS
+      keyPassword = project.BDS_WALLET_KEY_PASSWORD
     }
   }
 
@@ -146,12 +145,17 @@ dependencies {
   api(files("libs/aptoide-analytics.aar"))
   implementation 'com.android.support:appcompat-v7:28.0.0'
   implementation 'com.google.code.gson:gson:2.10.1'
+
+  debugImplementation(files("libs/android-appcoins-billing-debug.aar"))
+  debugImplementation(files("libs/appcoins-billing-debug.aar"))
+  debugImplementation(files("libs/appcoins-adyen-debug.aar"))
+  debugImplementation(files("libs/communication-debug.aar"))
   debugImplementation "io.catappult:appcoins-ads:$sdkDev"
-  debugImplementation "io.catappult:android-appcoins-billing:$sdkDev"
   debugImplementation "io.catappult:appcoins-contract-proxy:$sdkDev"
-  releaseImplementation "io.catappult:appcoins-ads:$sdk"
+
   releaseImplementation "io.catappult:android-appcoins-billing:$sdk"
-  releaseImplementation "io.catappult:appcoins-contract-proxy:$sdk"
+  releaseImplementation "io.catappult:appcoins-ads:$sdk_legacy"
+  releaseImplementation "io.catappult:appcoins-contract-proxy:$sdk_legacy"
 }
 
 def renameArtifact(defaultConfig) {
