--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion 33
-  buildToolsVersion '29.0.2'
   namespace "com.aptoide.iabexample"
 
   flavorDimensions = ["iab", "network"]
@@ -146,7 +145,7 @@ dependencies {
   api(files("libs/aptoide-analytics.aar"))
   implementation 'com.android.support:appcompat-v7:28.0.0'
   implementation 'com.google.code.gson:gson:2.10.1'
-§o  debugImplementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+  debugImplementation 'io.reactivex.rxjava2:rxjava:2.2.19'
   debugImplementation 'com.madgag.spongycastle:prov:1.58.0.0'
   debugImplementation 'com.indicative.client.android:Indicative-Android:1.1.0'
   debugImplementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"
